src/styles/chat.css
.chat-background {
  background-color: white;
  position: absolute;
  height: 100dvh;
  width: 100%;
}

.messages {
  margin: 1rem;
  margin-bottom: 4rem;
}

.chat-message {
  padding: 0.75rem;
  max-width: 75vw;
  border-radius: 1rem;
  font-family: Arial, Helvetica, sans-serif;
  line-height: 1.2 5rem;
  background-color: var(--primary);
  border-bottom-right-radius: 0;
  color: white;
  margin-top: 0.3rem;
  margin-bottom: 0.3rem;
}

.chat-message p {
  margin: 0;
  padding: 0;
}

.chat-container {
  display: flex;
  justify-content: flex-end;
}

.chat-container.system-message {
  justify-content: center;
}

.system-message .chat-message {
  background-color: var(--secondary);
  border-radius: 1rem;
  text-align: center;
  margin: 1rem;
}

.chat-container.recieved {
  justify-content: flex-start;
}

.recieved .chat-message {
  background-color: lightgray;
  border-radius: 1rem;
  border-bottom-left-radius: 0;
  color: black;
}

